--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 
   <section id="about">
     <div class="container">
-      <img class="store-front" src="../src/img/game fachada.jpg" alt="Fachada da loja" />
+      <img class="store-front" src="../dev/img/game fachada.png" alt="Fachada da loja" />
       <div>
         <h2>Sobre a Loja</h2>
         <p>
@@ -40,9 +40,9 @@
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias nostrum saepe sequi inventore, illo unde, magnam quasi odit, repudiandae obcaecati dolorem delectus iusto sint ducimus earum fugit cupiditate nisi mollitia.
         </p>
         <ul class="brands-list">
-          <li><img src="../src/img/playstation-logo-A5B6E4856C-seeklogo.com.png" alt="Playstation"></li>
-          <li><img src="../src/img/xbox.png" alt="Xbox"></li>
-          <li><img src="../src/img/nintendo.png" alt="Nintendo"></li>
+          <li><img src="../dev/img/imagemin/playstation-logo-A5B6E4856C-seeklogo.com.png" alt="Playstation"></li>
+          <li><img src="../dev/img/imagemin/xbox.png" alt="Xbox"></li>
+          <li><img src="../dev/img/imagemin/nintendo.png" alt="Nintendo"></li>
         </ul>
       </div>
     </div>
@@ -65,9 +65,9 @@
         <div>
           <h3>Nos Acompanhe</h3>
           <ul class="social-links">
-            <li><a href="#" title="Siga-nos no Instagram"><img src="../src/img/instagram.png" alt="Logo do Instagram"></a></li>
-            <li><a href="#" title="Siga-nos no facebook"><img src="../src/img/facebook.png" alt="Logo do facebook"></a></li>
-            <li><a href="#" title="Visaite nosso Canal"><img src="../src/img/yotube.png" alt="Logo do Yotube"></a></li>
+            <li><a href="#" title="Siga-nos no Instagram"><img src="../dev/img/imagemin/instagram.png" alt="Logo do Instagram"></a></li>
+            <li><a href="#" title="Siga-nos no facebook"><img src="../dev/img/imagemin/facebook.png" alt="Logo do facebook"></a></li>
+            <li><a href="#" title="Visaite nosso Canal"><img src="../dev/img/imagemin/yotube.png" alt="Logo do Yotube"></a></li>
           </ul>
         </div>
         <div>
@@ -88,7 +88,7 @@
 
     </div>
   </footer>
-  <script src="../src/scripts/scripts.js"></script>
+  <script src="@@ENDERECO_DO_JS"></script>
 </body>
 
 </html>
